--- a/homeportfolio.html
+++ b/homeportfolio.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <header>
-            <span class="spanavbar">
+            <span class="spanavbar">    <!--Nav Bar-->
 
                 <a href="C:\ProjetoPortfolioRayan/sobremimportfolio.html"
                     target="_blank" rel="noopener">
@@ -36,7 +36,7 @@
 
         </header>
         <main>
-            <div class="divfotomemoji">
+            <div class="divfotomemoji">     <!--Conteúdo Principal-->
                 <img
                     src="C:\ProjetoPortfolioRayan\imagens/memojicomputador.png">
             </div>
