--- a/projetosportfolio.html
+++ b/projetosportfolio.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <header>
-            <span class="spanavbar">
+            <span class="spanavbar">    <!--Nav Bar-->
                 <a href="C:\ProjetoPortfolioRayan/homeportfolio.html"
                     target="_blank">
                     <p class="home">HOME</p>
@@ -34,7 +34,7 @@
             </span>
         </header>
         <main>
-            <p class="textodacaixaprojeto">PROJETOS</p>
+            <p class="textodacaixaprojeto">PROJETOS</p>     <!--Conteúdo Principal-->
             <div class="caixaloading1">
                 <p class="textodacaixaprojetoemunah">PROJETO EMUNAH</p>
                 <div class="loading"></div>
