--- a/sobremimportfolio.html
+++ b/sobremimportfolio.html
@@ -14,7 +14,7 @@
 
     <div class="container">
         <header>
-            <span class="spanavbar">
+            <span class="spanavbar">    <!--Nav Bar-->
                 <a href="C:\ProjetoPortfolioRayan/homeportfolio.html"
                     target="_blank">
                     <p class="home">HOME</p>
@@ -35,7 +35,7 @@
             </span>
         </header>
         <main>
-            <div class="fotosobremim">
+            <div class="fotosobremim"> <!--Conteúdo Principal-->
                 <img src="C:\ProjetoPortfolioRayan\imagens/logorayan.jpeg">
             </div>
             <div class="sobremim">
