--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
         <header>
             <span class="spanavbar">    <!--Nav Bar-->
 
-                <a href="C:\ProjetoPortfolioRayan/sobremimportfolio.html"
+                <a href="sobremimportfolio.html"
                     target="_blank" rel="noopener">
                     <p class="eu">SOBRE MIM</p>
                 </a>
 
-                <img src="C:\ProjetoPortfolioRayan\imagens/logorayanpng.png"
+                <img src=".\imagens/logorayanpng.png"
                     class="logorayan">
 
-                <a href="C:\ProjetoPortfolioRayan/contatosportfolio.html"
+                <a href="contatosportfolio.html"
                     target="_blank" rel="noopener">
                     <p class="fale-comigo">FALE COMIGO</p>
                 </a>
 
-                <a href="C:\ProjetoPortfolioRayan/projetosportfolio.html"
+                <a href="projetosportfolio.html"
                     target="_blank" rel="noopener">
                     <p class="projetos">PROJETOS</p>
                 </a>
@@ -38,7 +38,7 @@
         <main>
             <div class="divfotomemoji">     <!--Conteúdo Principal-->
                 <img
-                    src="C:\ProjetoPortfolioRayan\imagens/memojicomputador.png">
+                    src=".\imagens/memojicomputador.png">
             </div>
             <ul class="ultextorayan">
                 <li class="hello">Hello,</li><br>
