--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <p class="eu">SOBRE MIM</p>
                 </a>
 
-                <img src=".\imagens/logorayanpng.png"
+                <img src="./imagens/logorayanpng.png"
                     class="logorayan">
 
                 <a href="contatosportfolio.html"
