--- a/projetosportfolio.html
+++ b/projetosportfolio.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos Portfólio</title>
-    <link rel="stylesheet"   href="C:\ProjetoPortfolioRayan\css/cssportfolio.css">
+    <link rel="stylesheet"   href=".\css/cssportfolio.css">
 </head>
 
 <body>
@@ -14,20 +14,20 @@
     <div class="container">
         <header>
             <span class="spanavbar">    <!--Nav Bar-->
-                <a href="C:\ProjetoPortfolioRayan/index.html"
+                <a href="index.html"
                     target="_blank">
                     <p class="home">HOME</p>
                 </a>
 
-                <a href="C:\ProjetoPortfolioRayan/sobremimportfolio.html"
+                <a href="sobremimportfolio.html"
                     target="_blank" rel="noopener">
                     <p class="eu">SOBRE MIM/HOBBIES</p>
                 </a>
 
-                <img src="C:\ProjetoPortfolioRayan\imagens/logorayanpng.png"
+                <img src=".\imagens/logorayanpng.png"
                     class="logorayan">
 
-                <a href="C:\ProjetoPortfolioRayan/contatosportfolio.html"
+                <a href="contatosportfolio.html"
                     target="_blank" rel="noopener">
                     <p class="fale-comigo">FALE COMIGO</p>
                 </a>
@@ -42,17 +42,17 @@
             <div class="caixaloading2">
             
                 <div class="cuidado">
-                    <img src="C:\ProjetoPortfolioRayan\imagens/cuidado.png">
+                    <img src=".\imagens/cuidado.png">
                 </div>
             </div>
             <div class="caixaloading3">
                 <div class="cuidado">
-                    <img src="C:\ProjetoPortfolioRayan\imagens/cuidado.png">
+                    <img src=".\imagens/cuidado.png">
                 </div>
             </div>
             <div class="caixaloading4">
                 <div class="cuidado">
-                    <img src="C:\ProjetoPortfolioRayan\imagens/cuidado.png">
+                    <img src=".\imagens/cuidado.png">
                 </div>
             </div>
         </main>
