--- a/sobremimportfolio.html
+++ b/sobremimportfolio.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Mim Portfólio</title>
     <link rel="stylesheet"
-        href="C:\ProjetoPortfolioRayan\css/cssportfolio.css">
+        href=".\css/cssportfolio.css">
 </head>
 
 <body>
@@ -15,20 +15,20 @@
     <div class="container">
         <header>
             <span class="spanavbar">    <!--Nav Bar-->
-                <a href="C:\ProjetoPortfolioRayan/index.html"
+                <a href="index.html"
                     target="_blank">
                     <p class="home">HOME</p>
                 </a>
 
-                <img src="C:\ProjetoPortfolioRayan\imagens/logorayanpng.png"
+                <img src=".\imagens/logorayanpng.png"
                     class="logorayan">
 
-                <a href="C:\ProjetoPortfolioRayan/contatosportfolio.html"
+                <a href="contatosportfolio.html"
                     target="_blank" rel="noopener">
                     <p class="fale-comigo">FALE COMIGO</p>
                 </a>
 
-                <a href="C:\ProjetoPortfolioRayan/projetosportfolio.html"
+                <a href="projetosportfolio.html"
                     target="_blank" rel="noopener">
                     <p class="projetos">PROJETOS</p>
                 </a>
@@ -36,7 +36,7 @@
         </header>
         <main>
             <div class="fotosobremim"> <!--Conteúdo Principal-->
-                <img src="C:\ProjetoPortfolioRayan\imagens/logorayan.jpeg">
+                <img src=".\imagens/logorayan.jpeg">
             </div>
             <div class="sobremim">
                 <p class="lisobremim"> ME, RAYAN:</p>
